--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,14 @@ body {
   margin-right: auto;
 }
 
+.border-1 {
+  border-width: 1px;
+}
+
+.w-600 {
+  width: 600px;
+}
+
 .center {
   display: flex;
   justify-content: center;
